fixed nav bar for mobile and removed card animations on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -3,9 +3,30 @@
     padding: 0;
     box-sizing: border-box;
     background-color: #000000;
-    
 }
 @font-face {
     font-family: 'Sansation';
     src: url('/src/assets/fonts/Sansation-Regular.ttf') format('truetype');
+}
+
+/* Style the scrollbar */
+::-webkit-scrollbar {
+    width: 12px;  /* Width of the scrollbar */
+}
+  
+/* Style the scroll thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+    background-color: #E9204F;  /* Red color for the thumb */
+    border-radius: 10px;  /* Rounded corners */
+}
+  
+/* Style the scroll thumb when hovered */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #E9204F;  /* Darker red on hover */
+}
+  
+/* Style the scrollbar track (the area the thumb moves in) */
+::-webkit-scrollbar-track {
+    background: #000000;  /* Black track */
+    border-radius: 10px;
 }
